--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ minecraft_version=1.19.4
 fabric_loader_version=0.14.21
 fabric_version=0.82.0+1.19.4
 yarn_mappings=1.19.4+build.2
+
+geyser_version=2.1.0-SNAPSHOT
