Fixed Fabric commands, attempted to fix proxy ones & added some player management stuff

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -1,3 +1,4 @@
 ravelcraft.command.requires-op=You must be an operator to use this command.
+ravelcraft.command.help=The correct usage is:{0}
 
 ravelcraft.command.info=Information about RavelCraft.
