--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -1,3 +1,4 @@
 ravelcraft.command.requires-op=Vous devez être opérateur pour exécuter cette commande.
+ravelcraft.command.help=L'utilisation correcte de cette commande est :{0}
 
 ravelcraft.command.info=Informations sur RavelCraft.
