Many different additons & fixes:
* Bedrock UUID on proxy is now correct
* Added proxy message forwarding to player that it doesn't own
* Bedrock username will now filter for spaces
* Added broadcast command
* Added player join & leave messages
* Fixed some massive messaging flaws
* Cleaned up duplicate code

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -1,4 +1,9 @@
-ravelcraft.command.requires-op=You must be an operator to use this command.
-ravelcraft.command.help=The correct usage is:{0}
+ravelcraft.players.join.network=§e{0} joined the network
+ravelcraft.players.join.server=§e{0} joined the server
+ravelcraft.players.leave.network=§e{0} left the network
+ravelcraft.players.leave.server=§e{0} left the server
 
-ravelcraft.command.info=Information about RavelCraft.
+ravelcraft.command.requires-op=§cYou must be an operator to use this command
+ravelcraft.command.help=The correct usage is:{0}
+ravelcraft.command.info=Information about RavelCraft
+ravelcraft.command.broadcast=§l[Network Broadcast]§r {0}
