--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -1,4 +1,9 @@
-ravelcraft.command.requires-op=Vous devez être opérateur pour exécuter cette commande.
-ravelcraft.command.help=L'utilisation correcte de cette commande est :{0}
+ravelcraft.players.join.network=§e{0} a rejoint le réseau
+ravelcraft.players.join.server=§e{0} a rejoint le serveur
+ravelcraft.players.leave.network=§e{0} a quitté le réseau
+ravelcraft.players.leave.server=§e{0} a quitté le serveur
 
-ravelcraft.command.info=Informations sur RavelCraft.
+ravelcraft.command.requires-op=§cVous devez être opérateur pour exécuter cette commande
+ravelcraft.command.help=L'utilisation correcte de cette commande est :{0}
+ravelcraft.command.info=Informations sur RavelCraft
+ravelcraft.command.broadcast=§l[Diffusion Réseau]§r {0}
