Added chat formatting & hopefully fixed some messagaing issues

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -1,3 +1,5 @@
+ravelcraft.chat.format={0}: {1}
+
 ravelcraft.players.join.network=§e{0} joined the network
 ravelcraft.players.join.server=§e{0} joined the server
 ravelcraft.players.leave.network=§e{0} left the network
