--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -1,3 +1,5 @@
+ravelcraft.chat.format={0}: {1}
+
 ravelcraft.players.join.network=§e{0} a rejoint le réseau
 ravelcraft.players.join.server=§e{0} a rejoint le serveur
 ravelcraft.players.leave.network=§e{0} a quitté le réseau
