Added a language command & fixed some rank stuff

--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -7,5 +7,12 @@ ravelcraft.players.leave.server=§e{0} a quitté le serveur
 
 ravelcraft.command.requires-op=§cVous devez être opérateur pour exécuter cette commande
 ravelcraft.command.help=L'utilisation correcte de cette commande est :{0}
-ravelcraft.command.info=Informations sur RavelCraft
+ravelcraft.command.must-be-player=§cVous devez être un joueur pour exécuter cette commande
+
+ravelcraft.command.info=§l--- Informations du serveur ---\n§Site web : §6{0}\n§Invitations Discord : §6sYWtr9E §rou §6 VFB6632\n§rVersion RavelCraft : {1}
+
 ravelcraft.command.broadcast=§l[Diffusion Réseau]§r {0}
+
+ravelcraft.command.language.list=§lLanguages disponibles§r{0}
+ravelcraft.command.language.set=§aLanguage sélectionné : {0}
+ravelcraft.command.language.invalid=§cCe language n'est pas disponible
