--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -7,5 +7,12 @@ ravelcraft.players.leave.server=§e{0} left the server
 
 ravelcraft.command.requires-op=§cYou must be an operator to use this command
 ravelcraft.command.help=The correct usage is:{0}
-ravelcraft.command.info=Information about RavelCraft
+ravelcraft.command.must-be-player=§cYou must be a player to use this command
+
+ravelcraft.command.info=§l--- Server Information ---\n§rWebsite: §6{0}\n§rDiscord invites: §6sYWtr9E §ror §6 VFB6632\n§rRavelCraft version: {1}
+
 ravelcraft.command.broadcast=§l[Network Broadcast]§r {0}
+
+ravelcraft.command.language.list=§lAvailable Languages§r{0}
+ravelcraft.command.language.set=§aLanguage set to {0}
+ravelcraft.command.language.invalid=§cThat language is not available
