--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -9,7 +9,7 @@ ravelcraft.command.requires-op=§cVous devez être opérateur pour exécuter cette c
 ravelcraft.command.help=L'utilisation correcte de cette commande est :{0}
 ravelcraft.command.must-be-player=§cVous devez être un joueur pour exécuter cette commande
 
-ravelcraft.command.info=§l--- Informations du serveur ---\n§Site web : §6{0}\n§Invitations Discord : §6sYWtr9E §rou §6 VFB6632\n§rVersion RavelCraft : {1}
+ravelcraft.command.info=§l--- Informations du serveur ---\n§rSite web: §6{0}\n§rInvitations Discord: §6sYWtr9E §rou §6 VFB6632\n§rVersion de RavelCraft: {1}
 
 ravelcraft.command.broadcast=§l[Diffusion Réseau]§r {0}
 
