Massive messaging fixes for reliability & command implementations

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -8,8 +8,9 @@ ravelcraft.players.leave.server=§e{0} left the server
 ravelcraft.command.requires-op=§cYou must be an operator to use this command
 ravelcraft.command.help=The correct usage is:{0}
 ravelcraft.command.must-be-player=§cYou must be a player to use this command
+ravelcraft.command.player-not-found=§cPlayer not found
 
-ravelcraft.command.info=§l--- Server Information ---\n§rWebsite: §6{0}\n§rDiscord invites: §6sYWtr9E §ror §6 VFB6632\n§rRavelCraft version: {1}
+ravelcraft.command.info=§l--- Server Information ---\n§rWebsite: §6{0}\n§rDiscord invites: §6sYWtr9E §ror §6VFB6632\n§rRavelCraft version: {1}
 
 ravelcraft.command.broadcast=§l[Network Broadcast]§r {0}
 
