--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -6,13 +6,14 @@ ravelcraft.players.leave.network=§e{0} a quitté le réseau
 ravelcraft.players.leave.server=§e{0} a quitté le serveur
 
 ravelcraft.command.requires-op=§cVous devez être opérateur pour exécuter cette commande
-ravelcraft.command.help=L'utilisation correcte de cette commande est :{0}
+ravelcraft.command.help=L\'utilisation correcte de cette commande est : {0}
 ravelcraft.command.must-be-player=§cVous devez être un joueur pour exécuter cette commande
+ravelcraft.command.player-not-found=§cJoueur introuvable
 
-ravelcraft.command.info=§l--- Informations du serveur ---\n§rSite web: §6{0}\n§rInvitations Discord: §6sYWtr9E §rou §6 VFB6632\n§rVersion de RavelCraft: {1}
+ravelcraft.command.info=§l--- Informations du serveur ---\n§rSite web : §6{0}\n§rInvitations Discord : §6sYWtr9E §rou §6VFB6632\n§rVersion de RavelCraft : {1}
 
 ravelcraft.command.broadcast=§l[Diffusion Réseau]§r {0}
 
 ravelcraft.command.language.list=§lLanguages disponibles§r{0}
 ravelcraft.command.language.set=§aLanguage sélectionné : {0}
-ravelcraft.command.language.invalid=§cCe language n'est pas disponible
+ravelcraft.command.language.invalid=§cCe language n\'est pas disponible
