Refactors & added player kicking

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -17,3 +17,6 @@ ravelcraft.command.broadcast=§l[Network Broadcast]§r {0}
 ravelcraft.command.language.list=§lAvailable Languages§r{0}
 ravelcraft.command.language.set=§aLanguage set to {0}
 ravelcraft.command.language.invalid=§cThat language is not available
+
+ravelcraft.command.kick.success=§a{0} was kicked
+ravelcraft.command.kick.fail=§cFailed to kick {0}
