--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -17,3 +17,6 @@ ravelcraft.command.broadcast=§l[Diffusion Réseau]§r {0}
 ravelcraft.command.language.list=§lLanguages disponibles§r{0}
 ravelcraft.command.language.set=§aLanguage sélectionné : {0}
 ravelcraft.command.language.invalid=§cCe language n\'est pas disponible
+
+ravelcraft.command.kick.success=§a{0} a été déconnecté
+ravelcraft.command.kick.fail=§cImpossible de déconnecter {0}
