Implemented the rank command & fixed some issues with rank change

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -20,3 +20,8 @@ ravelcraft.command.language.invalid=§cThat language is not available
 
 ravelcraft.command.kick.success=§a{0} was kicked
 ravelcraft.command.kick.fail=§cFailed to kick {0}
+
+ravelcraft.command.rank.list=§lAvailable Ranks§r{0}
+ravelcraft.command.rank.set=§a{0} now has the rank of {1}
+ravelcraft.command.rank.invalid=§cThat rank doesn't exist
+ravelcraft.command.rank.get=§a{0} has the rank of {1}
