--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -20,3 +20,8 @@ ravelcraft.command.language.invalid=§cCe language n\'est pas disponible
 
 ravelcraft.command.kick.success=§a{0} a été déconnecté
 ravelcraft.command.kick.fail=§cImpossible de déconnecter {0}
+
+ravelcraft.command.rank.list=§lRangs disponibles§r{0}
+ravelcraft.command.rank.set=§a{0} a maintenant le rang de {1}
+ravelcraft.command.rank.invalid=§cCe rang n'existe pas
+ravelcraft.command.rank.get=§a{0} a le rang de {1}
