Added server transferring commands & fixed player command senders

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -25,3 +25,9 @@ ravelcraft.command.rank.list=§lAvailable Ranks§r{0}
 ravelcraft.command.rank.set=§a{0} now has the rank of {1}
 ravelcraft.command.rank.invalid=§cThat rank doesn't exist
 ravelcraft.command.rank.get=§a{0} has the rank of {1}
+
+ravelcraft.command.server.invalid=§cThat server doesn't exist
+ravelcraft.command.server.success.other=§aPlayer transferred to {0}
+ravelcraft.command.server.fail.self=§cFailed to transfer you to {0}
+ravelcraft.command.server.fail.other=§cFailed to transfer player to {0}
+ravelcraft.command.server.already=§cAlready connected to that server
