--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -6,7 +6,7 @@ ravelcraft.players.leave.network=§e{0} a quitté le réseau
 ravelcraft.players.leave.server=§e{0} a quitté le serveur
 
 ravelcraft.command.requires-op=§cVous devez être opérateur pour exécuter cette commande
-ravelcraft.command.help=L\'utilisation correcte de cette commande est : {0}
+ravelcraft.command.help=Utilisation correcte de la commande : {0}
 ravelcraft.command.must-be-player=§cVous devez être un joueur pour exécuter cette commande
 ravelcraft.command.player-not-found=§cJoueur introuvable
 
@@ -25,3 +25,9 @@ ravelcraft.command.rank.list=§lRangs disponibles§r{0}
 ravelcraft.command.rank.set=§a{0} a maintenant le rang de {1}
 ravelcraft.command.rank.invalid=§cCe rang n'existe pas
 ravelcraft.command.rank.get=§a{0} a le rang de {1}
+
+ravelcraft.command.server.invalid=§cCe serveur n'existe pas
+ravelcraft.command.server.success.other=§aJoueur transféré vers {0}
+ravelcraft.command.server.fail.self=§cImpossible de vous transférer vers {0}
+ravelcraft.command.server.fail.other=§cImpossible de transférer le joueur vers {0}
+ravelcraft.command.server.already=§cDéjà connecté à ce serveur
