Added a player list command

--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -31,3 +31,6 @@ ravelcraft.command.server.success.other=§aJoueur transféré vers {0}
 ravelcraft.command.server.fail.self=§cImpossible de vous transférer vers {0}
 ravelcraft.command.server.fail.other=§cImpossible de transférer le joueur vers {0}
 ravelcraft.command.server.already=§cDéjà connecté à ce serveur
+
+ravelcraft.command.list.no-players=Pas de joueurs en ligne
+ravelcraft.command.list.players=§lJoueurs en ligne:§r{0}
