--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -14,14 +14,14 @@ ravelcraft.command.info=§l--- Server Information ---\n§rWebsite: §6{0}\n§rDiscor
 
 ravelcraft.command.broadcast=§l[Network Broadcast]§r {0}
 
-ravelcraft.command.language.list=§lAvailable Languages§r{0}
+ravelcraft.command.language.list=§lAvailable Languages:§r{0}
 ravelcraft.command.language.set=§aLanguage set to {0}
 ravelcraft.command.language.invalid=§cThat language is not available
 
 ravelcraft.command.kick.success=§a{0} was kicked
 ravelcraft.command.kick.fail=§cFailed to kick {0}
 
-ravelcraft.command.rank.list=§lAvailable Ranks§r{0}
+ravelcraft.command.rank.list=§lAvailable Ranks:§r{0}
 ravelcraft.command.rank.set=§a{0} now has the rank of {1}
 ravelcraft.command.rank.invalid=§cThat rank doesn't exist
 ravelcraft.command.rank.get=§a{0} has the rank of {1}
@@ -31,3 +31,6 @@ ravelcraft.command.server.success.other=§aPlayer transferred to {0}
 ravelcraft.command.server.fail.self=§cFailed to transfer you to {0}
 ravelcraft.command.server.fail.other=§cFailed to transfer player to {0}
 ravelcraft.command.server.already=§cAlready connected to that server
+
+ravelcraft.command.list.no-players=No players online
+ravelcraft.command.list.players=§lOnline Players:§r{0}
