Added MOTD & Java server ping

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -34,3 +34,6 @@ ravelcraft.command.server.already=§cAlready connected to that server
 
 ravelcraft.command.list.no-players=No players online
 ravelcraft.command.list.players=§lOnline Players:§r{0}
+
+ravelcraft.command.motd.get=The current message of the day is: {0}
+ravelcraft.command.motd.set=§aMessage of the day set to: {0}
