--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -34,3 +34,6 @@ ravelcraft.command.server.already=§cDéjà connecté à ce serveur
 
 ravelcraft.command.list.no-players=Pas de joueurs en ligne
 ravelcraft.command.list.players=§lJoueurs en ligne:§r{0}
+
+ravelcraft.command.motd.get=Le message du jour est : {0}
+ravelcraft.command.motd.set=§aLe message du jour a été changé : {0}
