Added a whitelist (partly broken), made commands async & fixed duplicates

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -4,6 +4,7 @@ ravelcraft.players.join.network=§e{0} joined the network
 ravelcraft.players.join.server=§e{0} joined the server
 ravelcraft.players.leave.network=§e{0} left the network
 ravelcraft.players.leave.server=§e{0} left the server
+ravelcraft.players.not-whitelisted.backend=§cYou are not whitelisted on that server
 
 ravelcraft.command.requires-op=§cYou must be an operator to use this command
 ravelcraft.command.help=The correct usage is:{0}
@@ -37,3 +38,12 @@ ravelcraft.command.list.players=§lOnline Players:§r{0}
 
 ravelcraft.command.motd.get=The current message of the day is: {0}
 ravelcraft.command.motd.set=§aMessage of the day set to: {0}
+
+ravelcraft.command.whitelist.invalid-server=§cThat server doesn't exist
+ravelcraft.command.whitelist.enable-bool-invalid=§cTo set the whitelist status, you must choose true or false
+ravelcraft.command.whitelist.enable-true=§aYou enabled the whitelist on {0}
+ravelcraft.command.whitelist.enable-false=§aYou disabled the whitelist on {0}
+ravelcraft.command.whitelist.global-add=§aYou added {0} to the whitelist
+ravelcraft.command.whitelist.global-remove=§aYou removed {0} from the whitelist
+ravelcraft.command.whitelist.backend-add=§aYou added {0} to the whitelist on {1}
+ravelcraft.command.whitelist.backend-remove=§aYou removed {0} from the whitelist on {1}
