--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -4,6 +4,7 @@ ravelcraft.players.join.network=§e{0} a rejoint le réseau
 ravelcraft.players.join.server=§e{0} a rejoint le serveur
 ravelcraft.players.leave.network=§e{0} a quitté le réseau
 ravelcraft.players.leave.server=§e{0} a quitté le serveur
+ravelcraft.players.not-whitelisted.backend=§cVous n'êtes pas sur la liste blanche de ce serveur
 
 ravelcraft.command.requires-op=§cVous devez être opérateur pour exécuter cette commande
 ravelcraft.command.help=Utilisation correcte de la commande : {0}
@@ -37,3 +38,8 @@ ravelcraft.command.list.players=§lJoueurs en ligne:§r{0}
 
 ravelcraft.command.motd.get=Le message du jour est : {0}
 ravelcraft.command.motd.set=§aLe message du jour a été changé : {0}
+
+ravelcraft.command.whitelist.invalid-server=§cCe serveur n'existe pas
+ravelcraft.command.whitelist.enable-bool-invalid=§cPour mettre à jour le statut de la liste blanche, vous devez spécifier true (vrai) ou false (faux)
+ravelcraft.command.whitelist.enable-true=§aLa liste blanche a été activée pour {0}
+ravelcraft.command.whitelist.enable-false=§aLa liste blanche a été désactivée pour {0}
