Bedrock now has RC cape translation

--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -43,3 +43,7 @@ ravelcraft.command.whitelist.invalid-server=§cCe serveur n'existe pas
 ravelcraft.command.whitelist.enable-bool-invalid=§cPour mettre à jour le statut de la liste blanche, vous devez spécifier true (vrai) ou false (faux)
 ravelcraft.command.whitelist.enable-true=§aLa liste blanche a été activée pour {0}
 ravelcraft.command.whitelist.enable-false=§aLa liste blanche a été désactivée pour {0}
+ravelcraft.command.whitelist.global-add=§aVous avez ajouté {0} à la liste blanche
+ravelcraft.command.whitelist.global-remove=§aVous avez supprimé {0} de la liste blanche
+ravelcraft.command.whitelist.backend-add=§aVous avez ajouté {0} à la liste blanche sur {1}
+ravelcraft.command.whitelist.backend-remove=§aVous avez supprimé {0} de la liste blanche sur {1}
