Removed annoying toast about secure chat & changed domain

--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -4,7 +4,7 @@ ravelcraft.players.join.network=§e{0} a rejoint le réseau
 ravelcraft.players.join.server=§e{0} a rejoint le serveur
 ravelcraft.players.leave.network=§e{0} a quitté le réseau
 ravelcraft.players.leave.server=§e{0} a quitté le serveur
-ravelcraft.players.not-whitelisted.backend=§cVous n'êtes pas sur la liste blanche de ce serveur
+ravelcraft.players.not-whitelisted.backend=§cVous n'êtes pas sur la liste blanche de {0}
 
 ravelcraft.command.requires-op=§cVous devez être opérateur pour exécuter cette commande
 ravelcraft.command.help=Utilisation correcte de la commande : {0}
@@ -45,5 +45,5 @@ ravelcraft.command.whitelist.enable-true=§aLa liste blanche a été activée pour {
 ravelcraft.command.whitelist.enable-false=§aLa liste blanche a été désactivée pour {0}
 ravelcraft.command.whitelist.global-add=§aVous avez ajouté {0} à la liste blanche
 ravelcraft.command.whitelist.global-remove=§aVous avez supprimé {0} de la liste blanche
-ravelcraft.command.whitelist.backend-add=§aVous avez ajouté {0} à la liste blanche sur {1}
-ravelcraft.command.whitelist.backend-remove=§aVous avez supprimé {0} de la liste blanche sur {1}
+ravelcraft.command.whitelist.backend-add=§aVous avez ajouté {0} à la liste blanche de {1}
+ravelcraft.command.whitelist.backend-remove=§aVous avez supprimé {0} de la liste blanche de {1}
