--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -4,7 +4,7 @@ ravelcraft.players.join.network=§e{0} joined the network
 ravelcraft.players.join.server=§e{0} joined the server
 ravelcraft.players.leave.network=§e{0} left the network
 ravelcraft.players.leave.server=§e{0} left the server
-ravelcraft.players.not-whitelisted.backend=§cYou are not whitelisted on that server
+ravelcraft.players.not-whitelisted.backend=§cYou are not whitelisted on {0}
 
 ravelcraft.command.requires-op=§cYou must be an operator to use this command
 ravelcraft.command.help=The correct usage is:{0}
