Added player banning

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -47,3 +47,10 @@ ravelcraft.command.whitelist.global-add=§aYou added {0} to the whitelist
 ravelcraft.command.whitelist.global-remove=§aYou removed {0} from the whitelist
 ravelcraft.command.whitelist.backend-add=§aYou added {0} to the whitelist on {1}
 ravelcraft.command.whitelist.backend-remove=§aYou removed {0} from the whitelist on {1}
+
+ravelcraft.command.ban.invalid-days=§cThe number of days must be a positive integer
+ravelcraft.command.ban.already-banned=§c{0} is already banned for the next {1} days
+ravelcraft.command.ban.success=§a{0} was banned for {1} days
+
+ravelcraft.command.pardon.not-banned=§cThat player is not banned
+ravelcraft.command.pardon.success=§a{0} was unbanned
