--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -47,3 +47,10 @@ ravelcraft.command.whitelist.global-add=§aVous avez ajouté {0} à la liste blanch
 ravelcraft.command.whitelist.global-remove=§aVous avez supprimé {0} de la liste blanche
 ravelcraft.command.whitelist.backend-add=§aVous avez ajouté {0} à la liste blanche de {1}
 ravelcraft.command.whitelist.backend-remove=§aVous avez supprimé {0} de la liste blanche de {1}
+
+ravelcraft.command.ban.invalid-days=§cLe nombre de jours doit être un nombre entier positif
+ravelcraft.command.ban.already-banned=§c{0} est déjà banni pour les {1} prochains jours
+ravelcraft.command.ban.success=§a{0} a été banni pour {1} jours
+
+ravelcraft.command.pardon.not-banned=§cCe joueur n'est pas banni
+ravelcraft.command.pardon.success=§a{0} a été débanni
