Added maintenance mode

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -4,7 +4,9 @@ ravelcraft.players.join.network=§e{0} joined the network
 ravelcraft.players.join.server=§e{0} joined the server
 ravelcraft.players.leave.network=§e{0} left the network
 ravelcraft.players.leave.server=§e{0} left the server
+
 ravelcraft.players.not-whitelisted.backend=§cYou are not whitelisted on {0}
+ravelcraft.players.maintenance=§cThat server is currently in maintenance mode
 
 ravelcraft.command.requires-op=§cYou must be an operator to use this command
 ravelcraft.command.help=The correct usage is:{0}
@@ -54,3 +56,9 @@ ravelcraft.command.ban.success=§a{0} was banned for {1} days
 
 ravelcraft.command.pardon.not-banned=§cThat player is not banned
 ravelcraft.command.pardon.success=§a{0} was unbanned
+
+ravelcraft.command.maintenance.invalid-server=§cThat server doesn't exist
+ravelcraft.command.maintenance.global-enabled=§aYou enabled maintenance mode
+ravelcraft.command.maintenance.global-disabled=§aYou disabled maintenance mode
+ravelcraft.command.maintenance.backend-enabled=§aYou enabled maintenance mode on {0}
+ravelcraft.command.maintenance.backend-disabled=§aYou disabled maintenance mode on {0}
