--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -4,7 +4,9 @@ ravelcraft.players.join.network=§e{0} a rejoint le réseau
 ravelcraft.players.join.server=§e{0} a rejoint le serveur
 ravelcraft.players.leave.network=§e{0} a quitté le réseau
 ravelcraft.players.leave.server=§e{0} a quitté le serveur
+
 ravelcraft.players.not-whitelisted.backend=§cVous n'êtes pas sur la liste blanche de {0}
+ravelcraft.players.maintenance=§cCe serveur est en maintenance
 
 ravelcraft.command.requires-op=§cVous devez être opérateur pour exécuter cette commande
 ravelcraft.command.help=Utilisation correcte de la commande : {0}
@@ -54,3 +56,9 @@ ravelcraft.command.ban.success=§a{0} a été banni pour {1} jours
 
 ravelcraft.command.pardon.not-banned=§cCe joueur n'est pas banni
 ravelcraft.command.pardon.success=§a{0} a été débanni
+
+ravelcraft.command.maintenance.invalid-server=§cCe serveur n'existe pas
+ravelcraft.command.maintenance.global-enabled=§aVous avez activé le mode maintenance
+ravelcraft.command.maintenance.global-disabled=§aVous avez désactivé le mode maintenance
+ravelcraft.command.maintenance.backend-enabled=§aVous avez activé le mode maintenance sur {0}
+ravelcraft.command.maintenance.backend-disabled=§aVous avez désactivé le mode maintenance sur {0}
