Added hat, spawn & broken suicide for some reason

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -1,3 +1,8 @@
+ravelcraft.command.requires-op=§cYou must be an operator to use this command
+ravelcraft.command.help=The correct usage is:{0}
+ravelcraft.command.must-be-player=§cYou must be a player to use this command
+ravelcraft.command.player-not-found=§cPlayer not found
+
 ravelcraft.chat.format={0}: {1}
 
 ravelcraft.players.join.network=§e{0} joined the network
@@ -7,11 +12,6 @@ ravelcraft.players.leave.server=§e{0} left the server
 
 ravelcraft.players.not-whitelisted.backend=§cYou are not whitelisted on {0}
 ravelcraft.players.maintenance=§cThat server is currently in maintenance mode
-
-ravelcraft.command.requires-op=§cYou must be an operator to use this command
-ravelcraft.command.help=The correct usage is:{0}
-ravelcraft.command.must-be-player=§cYou must be a player to use this command
-ravelcraft.command.player-not-found=§cPlayer not found
 
 ravelcraft.command.info=§l--- Server Information ---\n§rWebsite: §6{0}\n§rDiscord invites: §6sYWtr9E §ror §6VFB6632\n§rRavelCraft version: {1}
 
@@ -62,3 +62,9 @@ ravelcraft.command.maintenance.global-enabled=§aYou enabled maintenance mode
 ravelcraft.command.maintenance.global-disabled=§aYou disabled maintenance mode
 ravelcraft.command.maintenance.backend-enabled=§aYou enabled maintenance mode on {0}
 ravelcraft.command.maintenance.backend-disabled=§aYou disabled maintenance mode on {0}
+
+ravelcraft.command.spawn.not-set=§cSpawn has not been set
+ravelcraft.command.spawn.set=§aSpawn set to your current location
+ravelcraft.command.spawn.teleport=§aTeleported to spawn
+
+ravelcraft.command.suicide=§aYou killed yourself
