--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -1,3 +1,8 @@
+ravelcraft.command.requires-op=§cVous devez être opérateur pour exécuter cette commande
+ravelcraft.command.help=Utilisation correcte de la commande : {0}
+ravelcraft.command.must-be-player=§cVous devez être un joueur pour exécuter cette commande
+ravelcraft.command.player-not-found=§cJoueur introuvable
+
 ravelcraft.chat.format={0}: {1}
 
 ravelcraft.players.join.network=§e{0} a rejoint le réseau
@@ -7,11 +12,6 @@ ravelcraft.players.leave.server=§e{0} a quitté le serveur
 
 ravelcraft.players.not-whitelisted.backend=§cVous n'êtes pas sur la liste blanche de {0}
 ravelcraft.players.maintenance=§cCe serveur est en maintenance
-
-ravelcraft.command.requires-op=§cVous devez être opérateur pour exécuter cette commande
-ravelcraft.command.help=Utilisation correcte de la commande : {0}
-ravelcraft.command.must-be-player=§cVous devez être un joueur pour exécuter cette commande
-ravelcraft.command.player-not-found=§cJoueur introuvable
 
 ravelcraft.command.info=§l--- Informations du serveur ---\n§rSite web : §6{0}\n§rInvitations Discord : §6sYWtr9E §rou §6VFB6632\n§rVersion de RavelCraft : {1}
 
@@ -62,3 +62,9 @@ ravelcraft.command.maintenance.global-enabled=§aVous avez activé le mode mainten
 ravelcraft.command.maintenance.global-disabled=§aVous avez désactivé le mode maintenance
 ravelcraft.command.maintenance.backend-enabled=§aVous avez activé le mode maintenance sur {0}
 ravelcraft.command.maintenance.backend-disabled=§aVous avez désactivé le mode maintenance sur {0}
+
+ravelcraft.command.spawn.not-set=§cLe point de spawn n'a pas été défini
+ravelcraft.command.spawn.set=§aLe point de spawn a été défini à votre position
+ravelcraft.command.spawn.teleport=§aVous avez été téléporté au point de spawn
+
+ravelcraft.command.suicide=§aVous vous êtes tué
