Added home commands

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -67,4 +67,12 @@ ravelcraft.command.spawn.not-set=§cSpawn has not been set
 ravelcraft.command.spawn.set=§aSpawn set to your current location
 ravelcraft.command.spawn.teleport=§aTeleported to spawn
 
-ravelcraft.command.suicide=§aYou killed yourself
+ravelcraft.command.kill=§aYou killed yourself
+
+ravelcraft.command.home.invalid-number=§cThat isn't a valid home number
+ravelcraft.command.home.out-of-bounds=§cA home number must be greater than 0, you have a maximum of {0} homes
+ravelcraft.command.home.not-set=§cThat home hasn't been set
+ravelcraft.command.home.teleported=§aTeleported to home
+ravelcraft.command.home.set=§aHome set to your current location
+ravelcraft.command.home.get=§a{0} has a home number {1} at {2}
+ravelcraft.command.home.deleted=§aHome deleted
