--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -67,4 +67,12 @@ ravelcraft.command.spawn.not-set=§cLe point de spawn n'a pas été défini
 ravelcraft.command.spawn.set=§aLe point de spawn a été défini à votre position
 ravelcraft.command.spawn.teleport=§aVous avez été téléporté au point de spawn
 
-ravelcraft.command.suicide=§aVous vous êtes tué
+ravelcraft.command.kill=§aVous vous êtes tué
+
+ravelcraft.command.home.invalid-number=§cCe n'est pas un numéro de maison valide
+ravelcraft.command.home.out-of-bounds=§cUn numéro de maison doit être supérieur à 0, vous avez un maximum de {0} maisons
+ravelcraft.command.home.not-set=§cVous n'avez pas de maison à ce numéro
+ravelcraft.command.home.teleported=§aVous avez été téléporté à votre maison
+ravelcraft.command.home.set=§aVous avez défini votre maison à votre position
+ravelcraft.command.home.get=§a{0} a une mainson numérotée {1} à {2}
+ravelcraft.command.home.deleted=§aMaion supprimée
