Added TPA & made threading safer

--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -1,7 +1,8 @@
 ravelcraft.command.requires-op=§cVous devez être opérateur pour exécuter cette commande
 ravelcraft.command.help=Utilisation correcte de la commande : {0}
 ravelcraft.command.must-be-player=§cVous devez être un joueur pour exécuter cette commande
-ravelcraft.command.player-not-found=§cJoueur introuvable
+ravelcraft.command.player-not-found=§cLe joueur est introuvable
+ravelcraft.command.player-not-online=§cLe joueur n'est pas en ligne
 
 ravelcraft.chat.format={0}: {1}
 
@@ -76,3 +77,17 @@ ravelcraft.command.home.teleported=§aVous avez été téléporté à votre maison
 ravelcraft.command.home.set=§aVous avez défini votre maison à votre position
 ravelcraft.command.home.get=§a{0} a une mainson numérotée {1} à {2}
 ravelcraft.command.home.deleted=§aMaion supprimée
+
+ravelcraft.command.tpa.str.sent=§aVous avez envoyé une demande de téléportation à {0} afin de pouvoir vous téléporter à elle/lui.
+ravelcraft.command.tpa.str.received={0} aimerait se téléporter à vous. Tapez §6/tpaccept§r pour accepter la demande ou §6/tpdeny§r pour la refuser. Cette demande expirera dans {1} secondes.
+ravelcraft.command.tpa.rts.sent=§aVous avez envoyé une demande de téléportation à {0} pour qu'iel puisse se téléporter à vous.
+ravelcraft.command.tpa.rts.received={0} souhaite que vous vous téléportiez à lui/elle. Tapez §6/tpaccept§r pour accepter la demande ou §6/tpdeny§r pour la refuser. Cette demande expirera dans {1} secondes.
+ravelcraft.command.tpa.deny.sent=§cVous avez refusé la demande de téléportation
+ravelcraft.command.tpa.deny.received=§c{0} a refusé votre demande de téléportation
+ravelcraft.command.tpa.accept.sent=§aVous avez accepté la demande de téléportation
+ravelcraft.command.tpa.accept.received=§a{0} a accepté votre demande de téléportation
+ravelcraft.command.tpa.expired.sender=§cVotre demande de téléportation à {0} a expiré
+ravelcraft.command.tpa.expired.receiver=§cLa demande de téléportation de {0} a expiré
+ravelcraft.command.tpa.no-requests=§cVous n'avez pas de demandes de téléportation
+ravelcraft.command.tpa.request-pending=§c{0} a déjà une demande de téléportation en attente
+ravelcraft.command.tpa.self=§cVous ne pouvez pas vous téléporter à vous-même
