--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -2,6 +2,7 @@ ravelcraft.command.requires-op=§cYou must be an operator to use this command
 ravelcraft.command.help=The correct usage is:{0}
 ravelcraft.command.must-be-player=§cYou must be a player to use this command
 ravelcraft.command.player-not-found=§cPlayer not found
+ravelcraft.command.player-not-online=§cPlayer not online
 
 ravelcraft.chat.format={0}: {1}
 
@@ -76,3 +77,17 @@ ravelcraft.command.home.teleported=§aTeleported to home
 ravelcraft.command.home.set=§aHome set to your current location
 ravelcraft.command.home.get=§a{0} has a home number {1} at {2}
 ravelcraft.command.home.deleted=§aHome deleted
+
+ravelcraft.command.tpa.str.sent=§aYou sent a teleport request to {0} so you can teleport to them.
+ravelcraft.command.tpa.str.received={0} would like to teleport to you. Type §6/tpaccept§r to accept the request or §6/tpdeny§r to deny it. This request will expire in {1} seconds.
+ravelcraft.command.tpa.rts.sent=§aYou sent a teleport request to {0} so they can teleport to you.
+ravelcraft.command.tpa.rts.received={0} would like you to teleport to them. Type §6/tpaccept§r to accept the request or §6/tpdeny§r to deny it. This request will expire in {1} seconds.
+ravelcraft.command.tpa.deny.sent=§cYou denied the teleport request
+ravelcraft.command.tpa.deny.received=§c{0} denied your teleport request
+ravelcraft.command.tpa.accept.sent=§aYou accepted the teleport request
+ravelcraft.command.tpa.accept.received=§a{0} accepted your teleport request
+ravelcraft.command.tpa.expired.sender=§cThe teleport request to {0} expired
+ravelcraft.command.tpa.expired.receiver=§cThe teleport request from {0} expired
+ravelcraft.command.tpa.no-requests=§cYou have no teleport requests
+ravelcraft.command.tpa.request-pending=§c{0} already has a pending teleport request
+ravelcraft.command.tpa.self=§cYou can't teleport to yourself
