Added lobby security

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -64,6 +64,8 @@ ravelcraft.command.maintenance.global-disabled=§aYou disabled maintenance mode
 ravelcraft.command.maintenance.backend-enabled=§aYou enabled maintenance mode on {0}
 ravelcraft.command.maintenance.backend-disabled=§aYou disabled maintenance mode on {0}
 
+ravelcraft.player.display.server-name=§eYou are connected to {0}
+
 ravelcraft.command.spawn.not-set=§cSpawn has not been set
 ravelcraft.command.spawn.set=§aSpawn set to your current location
 ravelcraft.command.spawn.teleport=§aTeleported to spawn
