--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -64,6 +64,8 @@ ravelcraft.command.maintenance.global-disabled=§aVous avez désactivé le mode mai
 ravelcraft.command.maintenance.backend-enabled=§aVous avez activé le mode maintenance sur {0}
 ravelcraft.command.maintenance.backend-disabled=§aVous avez désactivé le mode maintenance sur {0}
 
+ravelcraft.player.display.server-name=§eVous êtes connecté à {0}
+
 ravelcraft.command.spawn.not-set=§cLe point de spawn n'a pas été défini
 ravelcraft.command.spawn.set=§aLe point de spawn a été défini à votre position
 ravelcraft.command.spawn.teleport=§aVous avez été téléporté au point de spawn
