Refector & added some player screening

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -93,3 +93,7 @@ ravelcraft.command.tpa.expired.receiver=§cThe teleport request from {0} expired
 ravelcraft.command.tpa.no-requests=§cYou have no teleport requests
 ravelcraft.command.tpa.request-pending=§c{0} already has a pending teleport request
 ravelcraft.command.tpa.self=§cYou can't teleport to yourself
+
+ravelcraft.join-info.rules=Hey, have you read the rules on our website? It might be a good idea!
+ravelcraft.join-info.announcements=We post announcements on our Discord server and website, so check them out!
+ravelcraft.join-info.languages=Did you know that RavelCraft has translations? You can change your language with §6/language§r!
