Added custom map creation

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -94,6 +94,11 @@ ravelcraft.command.tpa.no-requests=§cYou have no teleport requests
 ravelcraft.command.tpa.request-pending=§c{0} already has a pending teleport request
 ravelcraft.command.tpa.self=§cYou can't teleport to yourself
 
+ravelcraft.command.map.nan=§cThat isn't a number
+ravelcraft.command.map.invalid.url=§cThat isn't a valid URL
+ravelcraft.command.map.invalid.id=§cThat map ID doesn't exist
+ravelcraft.command.map.done=§aMap created
+
 ravelcraft.join-info.rules=Hey, have you read the rules on our website? It might be a good idea!
 ravelcraft.join-info.announcements=We post announcements on our Discord server and website, so check them out!
 ravelcraft.join-info.languages=Did you know that RavelCraft has translations? You can change your language with §6/language§r!
