--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -94,6 +94,11 @@ ravelcraft.command.tpa.no-requests=§cVous n'avez pas de demandes de téléportatio
 ravelcraft.command.tpa.request-pending=§c{0} a déjà une demande de téléportation en attente
 ravelcraft.command.tpa.self=§cVous ne pouvez pas vous téléporter à vous-même
 
+ravelcraft.command.map.nan=§cCe n'est pas un nombre
+ravelcraft.command.map.invalid.url=§cCe n'est pas une URL valide
+ravelcraft.command.map.invalid.id=§cCette ID de carte n'existe pas
+ravelcraft.command.map.done=§aCarte créée avec succès
+
 ravelcraft.join-info.rules=As-tu lu les règles sur notre site web ? C'est peut-être une bonne idée !
 ravelcraft.join-info.announcements=Nous publions des annonces sur notre serveur Discord et sur notre site web, alors n'hésitez pas à les consulter !
 ravelcraft.join-info.languages=Saviez-vous que RavelCraft a des traductions ? Vous pouvez changer de langue avec §6/language§r !
