Added msg command

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -99,6 +99,9 @@ ravelcraft.command.map.invalid.url=§cThat isn't a valid URL
 ravelcraft.command.map.invalid.id=§cThat map ID doesn't exist
 ravelcraft.command.map.done=§aMap created
 
+ravelcraft.command.msg.sender=§dTo §r{0}: {1}
+ravelcraft.command.msg.receiver=§dFrom §r{0}: {1}
+
 ravelcraft.join-info.rules=Hey, have you read the rules on our website? It might be a good idea!
 ravelcraft.join-info.announcements=We post announcements on our Discord server and website, so check them out!
 ravelcraft.join-info.languages=Did you know that RavelCraft has translations? You can change your language with §6/language§r!
