--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -99,6 +99,9 @@ ravelcraft.command.map.invalid.url=§cCe n'est pas une URL valide
 ravelcraft.command.map.invalid.id=§cCette ID de carte n'existe pas
 ravelcraft.command.map.done=§aCarte créée avec succès
 
+ravelcraft.command.msg.sender=§dÀ §r{0}: {1}
+ravelcraft.command.msg.receiver=§dDe §r{0}: {1}
+
 ravelcraft.join-info.rules=As-tu lu les règles sur notre site web ? C'est peut-être une bonne idée !
 ravelcraft.join-info.announcements=Nous publions des annonces sur notre serveur Discord et sur notre site web, alors n'hésitez pas à les consulter !
 ravelcraft.join-info.languages=Saviez-vous que RavelCraft a des traductions ? Vous pouvez changer de langue avec §6/language§r !
