Completed update to 1.20.6

--- a/shared/src/main/resources/ravel-lang/en.properties
+++ b/shared/src/main/resources/ravel-lang/en.properties
@@ -105,3 +105,5 @@ ravelcraft.command.msg.receiver=§dFrom §r{0}: {1}
 ravelcraft.join-info.rules=Hey, have you read the rules on our website? It might be a good idea!
 ravelcraft.join-info.announcements=We post announcements on our Discord server and website, so check them out!
 ravelcraft.join-info.languages=Did you know that RavelCraft has translations? You can change your language with §6/language§r!
+
+ravelcraft.command.cracked.reload=§aCracked user list reloaded
