--- a/shared/src/main/resources/ravel-lang/fr.properties
+++ b/shared/src/main/resources/ravel-lang/fr.properties
@@ -105,3 +105,5 @@ ravelcraft.command.msg.receiver=§dDe §r{0}: {1}
 ravelcraft.join-info.rules=As-tu lu les règles sur notre site web ? C'est peut-être une bonne idée !
 ravelcraft.join-info.announcements=Nous publions des annonces sur notre serveur Discord et sur notre site web, alors n'hésitez pas à les consulter !
 ravelcraft.join-info.languages=Saviez-vous que RavelCraft a des traductions ? Vous pouvez changer de langue avec §6/language§r !
+
+ravelcraft.command.cracked.reload=§aLa liste des utilisateurs crackés a été rechargée
