--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,7 @@ sgui_version=1.5.2+1.20.6
 snakeyaml_version=2.0
 auto_service_version=1.1.1
 gson_version=2.10.1
+waterdog_version=2.0.3-SNAPSHOT
+velocity_version=3.3.0-SNAPSHOT
 
 websocket_version=1.5.2
