Register blocks on Java using Polymer

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,6 @@ auto_service_version=1.1.1
 gson_version=2.10.1
 waterdog_version=2.0.3-SNAPSHOT
 velocity_version=3.3.0-SNAPSHOT
+polymer_version=0.9.2+1.21
 
 websocket_version=1.5.2
